<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/result"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55" />
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/one"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/three" />

            <Button
                android:id="@+id/four"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/four" />


        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/five"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/six" />
            <Button
                android:id="@+id/seven"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/seven" />
            <Button
                android:id="@+id/eight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/eight" />

        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/nine"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/nine" />
            <Button
                android:id="@+id/zero"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/zero" />
            <Button
                android:id="@+id/point"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/point" />
            <Button
                android:id="@+id/plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/plus" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/minus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/minus" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/divide"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/divide" />

            <Button
                android:id="@+id/equal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:layout_marginRight="5dp"
                android:text="@string/equal_to" />


        </LinearLayout>
        <Button
            android:id="@+id/clr"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/clr" />
    </LinearLayout>

</RelativeLayout>